# yourQtSipApp

./: CMakeLists.txt  README.md  pyyourclass.sip  pyyourstruct.sip  run.py  yourclass.cpp  yourclass.h  yourstruct.cpp  yourstruct.h
